IAMslashRBAC/require-org-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-org-labels
spec:
  background: false
  rules:
    - name: check-for-labels
      match:
        any:
          - resources:
              kinds:
                - "*"
              operations:
                - CREATE
                - UPDATE
      validate:
        failureAction: Audit
        message: "The label `org` is required for all resources."
        pattern:
          metadata:
            labels:
              org: "?*"
